--- a/cypress/readme
+++ b/cypress/readme
@@ -16,4 +16,13 @@ npx cypress run --env grepUntagged=true
 
 #that have "login" in their titles
 $ npx cypress run --env grep=login,grepTags=smoke
+
+#run test with allure reporter on
+npx cypress run --env grepTags=@smoke --spec "cypress/e2e/Marvin/**.cy.js" --reporter mocha-allure-reporter
+
+# Generate and open allure report
+allure generate allure-results --clean -o allure-report
+allure open
+
+
  
