--- a/cypress/readme
+++ b/cypress/readme
@@ -24,5 +24,8 @@ npx cypress run --env grepTags=@smoke --spec "cypress/e2e/Marvin/**.cy.js" --rep
 allure generate allure-results --clean -o allure-report
 allure open
 
+# Give Runtime Environment by this command line with browser in headed mode
+npx cypress run --spec "cypress/e2e/Marvin/RuntimeURL.cy.js" --config baseUrl=https://docs.cypress.io/guides/overview/why-cypress --headed
+
 
  
